--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,22 @@
-html {
-  font-family: sans-serif;
-}
-
-.flag-optional {
-  color: #999;
-}
-
-.is-validated input:invalid,
-.is-validated input[type="checkbox"]:invalid + label::before,
-.is-validated:invalid,
-.is-validated[type="checkbox"]:invalid + label::before {
-  border-color: #f33;
-}
-
-.error-message {
+.carousel-items > div {
   display: none;
-  background-color: #fee;
-  color: #c33;
 }
 
-.error-message-highlighted {
-  background-color: #c33;
-  color: #fff;
-}
-
-.is-validated > .error-message:first-child,
-.is-validated input:invalid + .error-message,
-.is-validated input:invalid + label + .error-message,
-.is-validated:invalid + .error-message,
-.is-validated:invalid + label + .error-message {
+#arsinoitherium-control:checked ~ .carousel-inner #arsinoitherium,
+#elasmotherium-control:checked ~ .carousel-inner #elasmotherium,
+#glyptodon-control:checked ~ .carousel-inner #glyptodon,
+#megatherium-control:checked ~ .carousel-inner #megatherium {
   display: block;
+}
+
+.carousel-btn {
+  border: 4px solid #fff;
+  border-radius: 50%;
+}
+
+#arsinoitherium-control:checked ~ .carousel-inner [for="arsinoitherium-control"]
+#elasmotherium-control:checked ~ .carousel-inner [for="elasmotherium-control"],
+#glyptodon-control:checked ~ .carousel-inner [for="glyptodon-control"],
+#megatherium-control:checked ~ .carousel-inner [for="megatherium-control"] {
+  background-color: #fff;
 }
